Fixed the issue

--- a/Lunch_n_Learn/classes/Lunch_n_Learn.cls
+++ b/Lunch_n_Learn/classes/Lunch_n_Learn.cls
@@ -2,7 +2,7 @@ public class Lunch_n_Learn {
 
     @AuraEnabled
     public static String temp() {
-        return '';
-        //return 'Testing this out';
+        //return '';
+        return 'Testing this out';
     }
 }
